--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 base64 = "0.22.1"
 clap = "4.5.13"
-hmac = "0.13.0-pre.4"
+hmac = "0.12"
 serde = { version = "1.0.204", features = ["derive"] }
 sha2 = "0.11.0-pre.4"
 serde_json = "1.0.122"
