--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ base64 = "0.22.1"
 clap = "4.5.13"
 hmac = "0.12"
 serde = { version = "1.0.204", features = ["derive"] }
-sha2 = "0.11.0-pre.4"
+sha2 = "0.10"
 serde_json = "1.0.122"
